@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

hide circle
hide methods

title Domain Model Excerpt - US19

abstract class Entity {
    - id : String
    - type : String
    - startDate : String
    - endDate : String
}

class Person {
    - name : String
    - birthDate : String
    - nationality : String
}

class Organization {
    - name : String
    - organizationType : String
    - country : String
}

class Position {
    - positionTitle : String
    - positionType : String
    - organizationId : String
}

class Asset {
    - assetType : String
    - country : String
    - estimatedValue : double
}

class EntityCsvParser {
    + {static} parse(filePath : String) : List<Entity>
}

Entity <|-- Person
Entity <|-- Organization
Entity <|-- Position
Entity <|-- Asset

EntityCsvParser ..> Entity : creates >

@enduml
